Fix small graphical bugs, especially with overflowing images

--- a/sass/custom-styles.scss
+++ b/sass/custom-styles.scss
@@ -140,8 +140,6 @@ img {
 	}
 
 .expanding-group {
-	max-height: 30vh;
-	overflow-y: scroll;
 	}
 
 #state-info {
